--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Prettify the JS Code
       uses: creyD/prettier_action@v2.0
       with:
-        prettier_options: '--no-semi --write *.js'
+        prettier_options: '--no-semi --write *.{js,ts}'
         branch: master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
